Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6676 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -64,6 +64,8 @@ foxtrick.ForumYouthIcons.youth_series.desc=Додаје иконицу за ИД
 foxtrick.ForumYouthIcons.enlarge_input.desc=Повећава поље за поруке ради лакшег писања.
 foxtrick.ForumYouthIcons.pre.desc=Додаје иконицу за Форум 'pre'формат (за постовање HTML тагова) (за девелопере).
 foxtrick.ForumYouthIcons.table.desc=Додаје иконицу за прављење табела на Форуму.
+foxtrick.ForumYouthIcons.debug.desc=Додаје иконицу за постовање 'Фокстрик дебуг лога'
+foxtrick.ForumYouthIcons.settings.desc=Додаје иконицу за постовање Фокстрик подешавања
 foxtrick.ShowMessageButton.desc=Додаје дугме 'Пошаљи поруку' на страну са подацима о менаџеру.
 foxtrick.FormatPostingText.desc=Замењује Фокстрикове HT-ML тагове, HTML таговима (на пример: [pre] element) (за девелопере).
 foxtrick.CopyPostID.desc=Преусмеравање ПостИД-а.
@@ -172,7 +174,7 @@ foxtrick.FixcssProblems.desc=Поправља поједине проблеме 
 foxtrick.FixcssProblems.Club_Menu_Teamnames.desc=Коригује скраћивање предугачких имена тимова у левом менију.
 foxtrick.FixcssProblems.Forum_FoxLink_Headers.desc=Коригује невидљиве 'Foxlink' сличице у заглављима порука на форуму.
 foxtrick.FixcssProblems.Page_Minimum_Height.desc=Коригује искакање страницe када скролбар није приказан .
-foxtrick.FixcssProblems.MatchOrder_Lineheight.desc=Коригује проблем размештања поља за селектовање играча на страници поставе за меч.
+foxtrick.FixcssProblems.HideInvitation.desc=Уклони подмени за позивнице на дну левог менија
 foxtrick.FixcssProblems.RTL_Fixes.desc=Коригује неке ХТ грешке за језике који се пишу са десна на лево.
 foxtrick.FixcssProblems.ForumScrollBarFix.desc=Додаје кориговани скрол бар страницама форума. Подрхтавање слике је мање него само са укљученом Хеттрик опцијом.
 foxtrick.FixcssProblems.MatchReportRatingsFontFix.desc=Повећава величину фонта за ХТ формат 'small_font'.
@@ -282,6 +284,7 @@ foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Сакриј непознате 
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Сакриј реч 'максимално' ради уштеде простора, нарочито ако је укључена опција за приказивање слика играча
 foxtrick.SkillTable.desc=Прикажи познате вештине играча као табелу.
 foxtrick.SkillTable.OtherTeams.desc=Приказује табелу вештина и за друге тимове.
+foxtrick.SkillTable.ColouredYouth.desc=Прикажи вештине омладинаца у боји.
 foxtrick.HighlightCupwins.desc=Означи победничке тимове на страницама мечева националних купова.
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Означи и резултат ако је победник, тим са нижим куп рангом.
 foxtrick.SkillTranslation.desc=Додаје енглески превод за вештине на страници: Помоћ » Упутство » Додатак 2. Деноминације.
@@ -456,6 +459,11 @@ ForumYouthIcons.youthplayerid=линк до играча у омладинско
 ForumYouthIcons.youthteamid=линк до омладинског тима
 ForumYouthIcons.youthmatchid=убаци линк до омладинске утакмице
 ForumYouthIcons.youthseries=убаци линк до омладинске лиге
+
+ForumOtherIcons.label=Фокстрик
+ForumOtherIcons.debug=Убаци Фокстрик дебуг лог.
+ForumOtherIcons.settings=Убаци Фокстрик подешавања.
+
 #special bbcode, not really youth icons
 ForumSpecialBBCode.br=додај нови ред [br]
 ForumSpecialBBCode.user=додај ИД корисника
@@ -522,6 +530,9 @@ Keeper.abbr=ГО
 #'Set pieces' (with a space) changed to 'Set_pieces' (with underscore). make sure it's changed in your local copy
 Set_pieces=Прекиди
 Set_pieces.abbr=ПР
+
+PsicoTSI=PsicoTSI (просечна форма)
+PsicoTSI.abbr=PsicoTSI
 
 HTMS_Ability=HTMS-бодови вештине
 HTMS_Ability.abbr=Веш.
@@ -614,6 +625,13 @@ Current_club=Тренутни клуб
 Current_club.abbr=Клуб
 Current_league=Државе у којима играју
 Current_league.abbr=Држава
+
+
+JoinedSince=Време проведено у клубу
+JoinedSince.abbr=У клубу
+
+Hotlist=Маркирај трансфер
+Hotlist.abbr=МТ
 
 foxtrick.matchdetail.midfield=Везни ред
 foxtrick.matchdetail.attack=Напад
@@ -798,6 +816,9 @@ foxtrick.FlagCollectionToMap.World=Свет
 
 # SkillTable
 Skill_table=Табела вештина
+foxtrick.SkillTable.Add_homegrown_title=Додаје све играче поникле у клубу
+foxtrick.SkillTable.Remove_bot_players_title=Уклања играче који су у бот тимовима
+foxtrick.SkillTable.showTimeInClub_title=Приказује време протекло од играчеве промоције у сениорски тим
 foxtrick.SkillTable.detach=Издвоји
 
 Nationality=Националност
@@ -810,6 +831,9 @@ Age=Старост
 Age.abbr=Стар
 Match=Mеч
 Series=Лига
+
+TransferCompare=Трансфер поређење
+TransferCompare.abbr=ТП
 
 Bookmark=Маркирај
 Bookmark.abbr=М
@@ -914,6 +938,9 @@ View=Погледај
 Switch_view=Отвори/Затвори
 Filter=Филтер
 Detach=Издвоји
+AddHomegrown=Додај играче поникле у клубу
+RemoveBotPlayers=Уклони играче из бот тимова
+showTimeInClub=Прикажи време проведено у клубу
 
 # buttons
 button.ok=Потврди
@@ -948,7 +975,9 @@ exception.error=Дошло је до грешке: %s
 foxtrick=Фокстрик
 preferences=Подешавања
 foxtrick.prefs.preferences=Фокстрик подешавања
-foxtrick.log=FoxTrick Log (%1 on %2, locale %3)
+foxtrick.log.header=FoxTrick Log
+# keep the following line untranslated
+foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 
 status.active=укључен
 status.enabled=укључен, али неактиван на %s
@@ -958,6 +987,8 @@ prefs.screenshot=Слика са објашњењима опција за мод
 
 # tabs in preferences page
 tab.main=Главне опције
+tab.pagefiltered=Модули на појединачним страницама
+tab.allfiltered=Универзални модули
 tab.informationAggregation=Додатне информације
 tab.shortcutsAndTweaks=Пречице и додаци
 tab.presentation=Изглед и алати
@@ -1019,11 +1050,13 @@ foxtrick.prefs.activeCurrencyConverter=Активираj конвертор ва
 
 foxtrick.versionReleaseNotes=Прикажи промене у верзији:
 
-about.headDevelopers=Главни девелопери
+about.headDevelopers=Главни програмери
 about.projectOwners=Власници лиценце
-about.developers=Девелопери
+about.developers=Програмери
 about.translators=Преводиоци
 about.designers=Дизајнери
+filter.all=Филтрирај модуле по категоријама
+filter.page=Прикажи само модуле на последњој посећеној ХТ страници
 
 disable_all_foxtrick_modules_ask=Заиста желите да искључите све Фокстрик модуле?
 delete_foxtrick_branches_ask=Да ли сте сигурни да желите да обришете сва подешавања?
